; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/apr-util/test/extr_testxml.c_testxml.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/apr-util/test/extr_testxml.c_testxml.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_xml_parser = common dso_local global i32 0, align 4
@test_billion_laughs = common dso_local global i32 0, align 4
@test_CVE_2009_3720_alpha = common dso_local global i32 0, align 4
@test_CVE_2009_3720_beta = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @testxml(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32* @ADD_SUITE(i32* %3)
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @test_xml_parser, align 4
  %7 = call i32 @abts_run_test(i32* %5, i32 %6, i32* null)
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @test_billion_laughs, align 4
  %10 = call i32 @abts_run_test(i32* %8, i32 %9, i32* null)
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* @test_CVE_2009_3720_alpha, align 4
  %13 = call i32 @abts_run_test(i32* %11, i32 %12, i32* null)
  %14 = load i32*, i32** %2, align 8
  %15 = load i32, i32* @test_CVE_2009_3720_beta, align 4
  %16 = call i32 @abts_run_test(i32* %14, i32 %15, i32* null)
  %17 = load i32*, i32** %2, align 8
  ret i32* %17
}

declare dso_local i32* @ADD_SUITE(i32*) #1

declare dso_local i32 @abts_run_test(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
